[CRD iOS] Allow host audio to mix with sounds from other apps

Some users complain about background audio player being muted by the app.
This CL overrides some settings in the AudioSession to allow audio from
the app to be mixed with sounds from other apps.

Bug: 868088
Change-Id: I10af925e3eb488498ab83df25cbd77cea8ebd186
Reviewed-on: https://chromium-review.googlesource.com/1152182
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578472}