remoting/ios/app/app_delegate.mm
@@ -9,6 +9,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "remoting/ios/app/app_delegate.h"
 
+#import <AVFoundation/AVFoundation.h>
+
 #import "remoting/ios/app/app_initializer.h"
 #import "remoting/ios/app/app_view_controller.h"
 #import "remoting/ios/app/first_launch_view_presenter.h"
@@ -49,6 +51,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     didFinishLaunchingWithOptions:(NSDictionary*)launchOptions {
   [self launchRootViewController];
   [RemotingTheme applyColorSchemes];
+  [AVAudioSession.sharedInstance
+      setCategory:AVAudioSessionCategoryPlayback
+      withOptions:AVAudioSessionCategoryOptionMixWithOthers
+            error:NULL];
   [AppInitializer onAppDidFinishLaunching];
 
   return YES;
